# pico_audio_i2s_32b

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  SETUP.md
.github/workflows/: build-binaries.yml  ci.yml  nightly.yml  pr-checks.yml  quick-test.yml
.history/: CLAUDE_20250719162254.md  CLAUDE_20250719164729.md  CLAUDE_20250719165105.md
docs/: ANALOG_MUX.md  API.md  BUILD.md  SPECIFICATION.md
libs/pico_audio_core/: audio_i2s.c
pico_audio_i2s/: audio_i2s.pio
pico_audio_i2s/include/pico/: audio_i2s.h
pico_audio_i2s/pico_audio_32b/: audio.cpp
products/cross_fm_noise_synth/: CMakeLists.txt  README.md
products/cross_fm_noise_synth/docs/: DEVELOPMENT.md
products/cross_fm_noise_synth/include/: analog_multiplexer.h  analog_mux.h  biquad_rbj.h  cross_mod.h  cross_modulator.h  fm_engine.h  noise_generator.h  preset_manager.h  simple_fm.h  simple_noise.h  synth_config.h  ui_controller.h
products/cross_fm_noise_synth/src/: analog_multiplexer.c  biquad_rbj.cpp  cross_modulator.cpp  fm_engine.cpp  main.cpp  noise_generator.cpp  preset_manager.cpp  ui_controller.cpp
samples/sine_wave_i2s_32b/: CMakeLists.txt  README.md  analog_mux.h  sine_wave.cpp  sine_wave_fixed.cpp  test_comprehensive.cpp  test_minimal.cpp
